--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -18,7 +18,7 @@
 <body>
   <div class="container">
     <div class="edit-table p-4">
-      <h2 class="mb-3 text-center">内容のご確認・修正</h2>
+      <h2 class="mb-3 text-center">内容の確認・修正</h2>
       <div class="desc-msg">
         ※キャラ名の細かな表記や多少の誤字は（ほぼ）自動で修正されます。<br>
         明らかに違う部分だけ、ご自身で修正していただければ大丈夫です。
